Fixed suggestions box being below input box, index gold-silver-bronze shifting when there was a notification (nth-child, added container)

--- a/client/src/styles/AddResult.css
+++ b/client/src/styles/AddResult.css
@@ -48,7 +48,7 @@ form input[type=text]:focus {
 .react-autosuggest__suggestions-container--open {
   display: block;
   position: absolute;
-  top: 51px;
+  top: 30px;
   width: 240px;
   border: 1px solid #aaa;
   background-color: #fff;
